--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div class="container mx-auto p-4">
+      <h1 class="text-3xl font-bold text-center mb-4">Hello Vite!</h1>
+      <button class="btn btn-primary">Click Me</button>
+    </div>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
