--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
       <h1 class="text-3xl font-bold text-center mb-4">Hello Vite!</h1>
       <button class="btn btn-primary">Click Me</button>
     </div>
+    <div id="container"></div>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="JS/main.js"></script>
   </body>
 </html>
