--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
+    <link rel="stylesheet" href="./CSS/style.css" />
     <div id="container"></div>
     <div id="app"></div>
+
     <script type="module" src="JS/main.js"></script>
   </body>
 </html>
