--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <link rel="stylesheet" href="./CSS/style.css" />
-    <div id="container"></div>
+    <div
+      id="container"
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 place-items-center"
+    ></div>
+
     <div id="app"></div>
 
     <script type="module" src="JS/main.js"></script>
