--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,33 @@
     <link rel="stylesheet" href="./CSS/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      html {
+      }
+
+      body {
+        background-image: url("https://pm1.aminoapps.com/6824/63bc173ddbee84343eb8fb960d26ed7453446f48v2_hq.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
+
+      #container {
+        padding: 2rem;
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <link rel="stylesheet" href="./CSS/style.css" />
     <div
       id="container"
       class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 place-items-center"
     ></div>
-
-    <div id="app"></div>
 
     <script type="module" src="JS/main.js"></script>
   </body>
